#24 #16 Added documentation to functions/feature for both login.js and register.js. Changed some form options in register.js from text input to select and radio.

--- a/react-frontend/src/components/logReg/logReg.css
+++ b/react-frontend/src/components/logReg/logReg.css
@@ -101,6 +101,14 @@ input.error {
   margin-left: 1%;
 }
 
+  span {
+    font-size: 1em;
+  margin-bottom: 0.25em;
+  color: #222;
+  font-weight: lighter;
+  }
+
+
 .gender {
   margin-left: 1%;
 }
