--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -53,3 +53,12 @@
   position: relative;
   top: 120px; left: 40px;
 }
+
+.form {
+  background: #58828b; 
+  padding: 20px;
+}
+
+.content {
+  margin-left: 5px;
+}
