--- a/react-frontend/src/components/logReg/logReg.css
+++ b/react-frontend/src/components/logReg/logReg.css
@@ -5,15 +5,22 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #258ea6;
+  background-color: #58828b;
   padding-bottom: 100px;
+  overflow-x:hidden;
+  overflow-y: hidden;
 }
 
 .header {
-  padding-bottom: 40px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 1000;
+  padding-bottom: 20px;
+  padding-right: 80%;
   text-align: center;
+  background-color: #58828b;
+  overflow-x:hidden;
+  overflow-y: hidden;
 }
-
 
 .form-wrapper {
   width: 400px;
@@ -22,7 +29,7 @@
   padding: 10px 40px;
   border-radius: 10px;
   box-shadow: 0px 10px 50px #555;
-  background-color: #ffffff;
+  background-color: #f7f7f7;
 }
 
 .image{
@@ -33,6 +40,9 @@ form {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  text-align: left;
+  padding-left: 30%;
+  padding-top: 2%;
 }
 
 h1 {
@@ -156,7 +166,7 @@ input.error {
 }
 
 .loginBtn button {
-  background-color: #519e8a;
+  background-color: #2b2b2b;
   color: #fff;
   border: 2px solid #fff;
   width: 100%;
@@ -169,9 +179,9 @@ input.error {
 }
 
 .loginBtn button:hover {
-  color: #519e8a;
+  color: #2b2b2b;
   background-color: #fff;
-  border: 2px solid #519e8a;
+  border: 2px solid #2b2b2b;
 }
 
 .registerBtn {
@@ -182,7 +192,7 @@ input.error {
 }
 
 .registerBtn button {
-  background-color: #519e8a;
+  background-color: #2b2b2b;
   color: #fff;
   border: 2px solid #fff;
   width: 100%;
@@ -195,12 +205,13 @@ input.error {
 }
 
 .registerBtn button:hover {
-  color: #519e8a;
+  color: #2b2b2b;
   background-color: #fff;
-  border: 2px solid #519e8a;
+  border: 2px solid #2b2b2b;
 }
 
 .footer {
+  padding-top: 2%;
   color: black;
   text-align: center;
 }
