--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -44,7 +44,11 @@
 
 .post {
   background: #FFFFFF;
+  border: 1px solid #ccc;
+  min-height: 68px;
   padding: 20px;
+  display: flex;
+  font-size: 14px;
   margin: 10px 0 10px 0;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
 }
