--- a/react-frontend/src/components/post/post.css
+++ b/react-frontend/src/components/post/post.css
@@ -1,12 +1,11 @@
-/* .post {
-    border: 1px solid rgb(129, 30, 30);
-    width: 564px;
+.post {
+    background: #FFFFFF;
+    border: 1px solid #ccc;
     min-height: 68px;
-    padding: 10px;
+    padding: 20px;
     display: flex;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
-    line-height: 18px;
-    margin: auto;
-    
-} */
+    margin: 10px 0 10px 0;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
+  }
+  
