added upload to profile and fixed sizing for feed

--- a/react-frontend/src/components/profile/profile.css
+++ b/react-frontend/src/components/profile/profile.css
@@ -1,16 +1,18 @@
 .rows{
-    display: flex;
+    /* display: flex; */
     margin-top: 2em;
     list-style: none;
 }
 
 .rows .row{
     flex: 1 1 100%;
+    display: inline-block;
 }
 
 .rows .row1{
     flex: 1 1 100%;
     text-align: center;
+    /* display: inline-flex; */
 }
 
 .image{
