#7 #47 Finished implementing user nutritional history tables. This completes user story #7

--- a/react-frontend/src/components/profileNutrition/nutrition.css
+++ b/react-frontend/src/components/profileNutrition/nutrition.css
@@ -1,12 +1,15 @@
 .nutritionWrapper {
   height: 100%;
   width: 100%;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
   overflow-x:hidden;
   overflow-y: hidden;
   background-color: floralwhite;
 }
 
+.show-table{
+  margin-left: 85%;
+}
 .nutrition-form-wrapper {
   width: 500px;
   flex-direction: column;
@@ -156,24 +159,33 @@ text {
   padding: 10px 40px;
   border-style: solid;
   background-color: lightblue;
-  flex-direction: row;
+
 }
 
 .date-table{
-  flex-flow: row;
+  vertical-align: top;
+  margin-left: 19%;
   border-style: solid;
   border-color: black;
+  border-width: thin;
+  display: inline;
 }
 
 .calorie-table{
-  flex-flow: row;
+  vertical-align: top;
+  margin-left: auto;
+  margin-right: auto;
   border-style: solid;
   border-color: black;
+  border-width: thin;
+  display: inline;
 }
 
 .weight-table{
-  flex-flow: row;
+  vertical-align: top;
   border-style: solid;
   border-color: black;
+  border-width: thin;
+  display: inline;
 }
 
