--- a/react-frontend/src/components/logReg/logReg.css
+++ b/react-frontend/src/components/logReg/logReg.css
@@ -84,7 +84,7 @@ input.error {
   display: relative;
 }
 
-.eMail {
+.uNumber {
   margin-right: 1%;
   display: inline-block;
 
@@ -123,7 +123,7 @@ input.error {
   margin-left: 1%;
 }
 
-.phoneNumber {
+.uPassword {
   margin-left: 1%;
 }
 
