--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -12,8 +12,8 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
+*/
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -22,8 +22,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+  position: absolute;
+} */
 
+/*
 .App-link {
   color: #61dafb;
 }
