--- a/react-frontend/src/components/post/post.css
+++ b/react-frontend/src/components/post/post.css
@@ -3,9 +3,8 @@
     border: 1px solid #ccc;
     min-height: 68px;
     padding: 20px;
-    display: flex;
     font-size: 14px;
-    margin: 10px 100px 10px 5px;
+    /* margin: 10px 100px 10px 5px; */
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.10);
   }
   
