#129 added variable in fitness.py to calulate the amount of calories a user burned based on the time they worked out. Also added a table for this in fitness.js

--- a/react-frontend/src/components/profileFitness/fitness.css
+++ b/react-frontend/src/components/profileFitness/fitness.css
@@ -176,4 +176,11 @@ text {
   border-width: thin;
   display: inline;
 }
+.cals-table{
+  vertical-align: top;
+  border-style: solid;
+  border-color: black;
+  border-width: thin;
+  display: inline;
+}
 
