--- a/react-frontend/src/components/post/form.css
+++ b/react-frontend/src/components/post/form.css
@@ -2,8 +2,10 @@
     background: #58828b; 
     padding: 20px;
     margin: 5px 100px 10px 5px;
-    min-width: 68px;
+    min-width: 1.5em;
     display: flex;
+    /* width: 1.5em;
+    height: 1.5em; */
   }
   
   .content {
