--- a/react-frontend/src/components/post/feed.css
+++ b/react-frontend/src/components/post/feed.css
@@ -2,4 +2,13 @@
     position: relative;
     top: 120px; left: 40px;
     overflow-y: auto;
+    /* display: flex; */
+    /* justify-content: center; */
   }
+
+  /* .feed ul {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+  } */
