#135 Updated fitness.py and nutrition.py json packages to store ints for some fields that required number comparisons in both frontend history sections. Updated fitness.js and nutrition.js to have color coded numbers depending on how health a person is.

--- a/react-frontend/src/components/profileFitness/fitness.css
+++ b/react-frontend/src/components/profileFitness/fitness.css
@@ -184,3 +184,17 @@ text {
   display: inline;
 }
 
+.good {
+  color: green;
+  font-weight: bold;
+}
+.bad {
+  color: red;
+  font-weight: bold;
+}
+
+.intermediate{
+  color: yellow;
+  font-weight: bold;
+}
+
