added photo sharing in profile and home, and fixed backend for posts+photo sharing

--- a/react-frontend/src/components/post/feed.css
+++ b/react-frontend/src/components/post/feed.css
@@ -1,9 +1,10 @@
 .feed {
     position: relative;
     top: 120px; left: 40px;
-    overflow-y: auto;
     /* display: flex; */
     /* justify-content: center; */
+    height: auto;
+    width: 600px;
   }
 
   /* .feed ul {
