--- a/react-frontend/src/components/profileFitness/fitness.css
+++ b/react-frontend/src/components/profileFitness/fitness.css
@@ -6,9 +6,12 @@
   overflow-y: hidden;
   background-color: #f8b878;
 }
-
+.comp-profile{
+  position: absolute;
+  left: 45%;
+}
 .show-table{
-  margin-left: 85%;
+position: absolute;
 }
 .fitness-form-wrapper {
   width: 500px;
