--- a/react-frontend/src/components/post/form.css
+++ b/react-frontend/src/components/post/form.css
@@ -18,6 +18,14 @@
     overflow: auto;
   }
 
+  
+   input[name="file"] {
+    padding: 2px;
+    margin-left: 10px; 
+    background-color: whitesmoke;
+  } 
+
+  
   .button {
     background-color: #050505; /* Green */
     border: none;
@@ -28,6 +36,8 @@
     font-size: 16px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     border-radius: 12px;
-    overflow: hidden;
+    
+    /* overflow: auto; */
+    /* position: fixed; */
 }
 
