--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -1,4 +1,4 @@
-/* .App {
+.App {
   text-align: center;
 }
 
@@ -12,8 +12,8 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-*/
-/* .App-header {
+
+.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -23,9 +23,9 @@
   font-size: calc(10px + 2vmin);
   color: white;
   position: absolute;
-} */
+}
 
-/*
+
 .App-link {
   color: #61dafb;
 }
@@ -37,11 +37,7 @@
   to {
     transform: rotate(360deg);
   }
-} */
+}
 
-/* #root {
-  margin: 1em auto;
-  width: 650px;
-} */
 
 
