--- a/react-frontend/src/components/Friends/Friends.css
+++ b/react-frontend/src/components/Friends/Friends.css
@@ -15,5 +15,51 @@
   width: 20%;
   border-radius: 40%;
 }
+
+
+
+.person {
+  background: #585757;
+  width: 10rem;
+  padding: 1rem;
+  margin: 2rem auto;
+  transition: all 0.3 linear;
+  border-radius: 0.3rem;
+  text-align: center;
+}
+.person img {
+  border-radius: 0.3rem;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+  margin-left: 1rem;
+  border: 0.1rem solid teal;
+}
+.person h4 {
+  text-transform: capitalize;
+  margin: 0.5rem 0;
+  letter-spacing: 0.15rem;
+  color: teal;
+}
+.person:hover {
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.3);
+}
+.social-icons {
+  display: flex;
+  justify-content: space-around;
+  color: blue;
+}
+
+@media screen and (min-width: 768px) {
+  .person-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  .person-list {
+    grid-template-columns: repeat(1, 6fr);
+  }
+}
   
   
